# ink-edit

./: CMakeLists.txt  LICENSE  README.md  ccvt.h  ccvt_application.cpp  ccvt_application.h  ccvt_assign.cpp  ccvt_energy.cpp  ccvt_histogram.cpp  ccvt_init.cpp  ccvt_io.cpp  ccvt_optimizer.cpp  ccvt_sites.cpp  console_color.h  convex_polygon.h  domain.h  enriched_segment.h  grid.h  line_search.h  main_ccvt_cgal.cpp  pgm.h  pixel.h  primitive.h  pw_line_search.h  random.h  rt2.h  stb_image_write.h  timer.h  types.h  util.h
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot.h  implot_demo.cpp
matrix/: sparse_array.cpp  sparse_array.h  sparse_matrix.cpp  sparse_matrix.h  suite_sparse_qr.h
shaders/: color_shader.frag  composition_shader.frag  identity_shader.vert  noise_shader.frag  points_shader.frag  points_shader.vert
